refactor: 예외를 무시하던 로직 수정
- 기존 예외를 무시하도록 구성한 로직을 직접 검증하여 추가 여부를 판단하도록 변경합니다.
- 가독성 및 안전성 향상을 위한 작업입니다.